Added description for PFP

--- a/index.html
+++ b/index.html
@@ -36,11 +36,16 @@
     <div class="jumbotron">
         <div class="background">
             <h1 class="display-4">Patterns for Professionals</h1>
-            <p class="lead">Patterns for the Everyday Professional. Please use this site to explore, grasp inspiration
-                and become apart of the PFP family! T
+            <p class="lead">Welcome to Patterns For Professionals!
             </p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas, placeat commodi
+                nulla error
+                accusantium inventore vel, assumenda neque, molestias eaque saepe similique reprehenderit!
+                Maxime, nam incidunt ad optio similique tenetur. Vel sit quisquam nostrum ex blanditiis, nisi pariatur
+                soluta laborum illo fugit iusto, natus in iure unde magni temporibus nemo labore doloribus accusantium
+                dolores saepe!
+            </p>
             <p class="lead">
                 <a class="btn btn-success btn-lg" href="#" role="button">Sign Up</a>
                 <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
